# libcold

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cold/: CMakeLists.txt  Cold-Http.h  Cold.h  Coro.h  Io.h  Log.h  Net.h  Time.h
cold/coro/: AsyncEvent.h  AsyncMutex.h  ConditionVariable.h  Io.h  IoContext.cpp  IoContext.h  IoContextPool.cpp  IoContextPool.h  IoService.cpp  IoService.h  IoServicePool.cpp  IoServicePool.h  IoWatcher-ini.h  IoWatcher.cpp  IoWatcher.h  IoWatcherEpoll.cpp  IoWatcherEpoll.h  Task.h  TimeQueue.cpp  TimeQueue.h  Timer.cpp  Timer.h
cold/coro/test/: TaskTest.cpp  TimerTest.cpp
cold/coroutines/: AsyncMutex.h  AwaitableBase.h  Channel.h  Condition.h  CountDownLatch.h  Scheduler.h  Task.h  ThisCoro.h  WhenAll.h  WhenAny.h
cold/detail/: FlagFormatter.h  IoAwaitable.h  IoEvent.h  IoWatcher.h  LogCommon.h  SigpipeIgnorer.h  TaskBase.h  TimeoutAwaitable.h  TimerQueue.h  VoidOrDecay.h  fmt.h
cold/http/: DefaultHttpServlet.h  DispatcherServlet.h  HttpBody.h  HttpCommon.h  HttpFilter.h  HttpRequest.h  HttpRequestParser.h  HttpResponse.h  HttpServer.h  HttpServlet.h  HttpSession.h  MimeTypes.h  RawHttpRequest.h  Router.h  ServletContext.h  StaticFileServlet.h
cold/io/: AsyncIo.h  IoAwaitable.h  IoContext-ini.h  IoContext.h  IoContextPool.h  IoEvent.h  IoWatcher-ini.h  IoWatcher.h
cold/log/: BasicFileSink.h  Log.h  LogCommon.h  LogFactory.h  LogFormatter.cpp  LogFormatter.h  LogManager-ini.h  LogManager.h  LogSink.h  LogSinkFactory.h  Logger.cpp  Logger.h  NullSink.h  ShellColor.h  StdoutSink.h
cold/log/logsinks/: BasicFileSink.h  LogSink.h  NullSink.h  StdoutColorSink.h  StdoutSink.h
cold/log/sinks/: BasicFileSink.h  LogSink.h  NullSink.h  StdoutColorSink.h  StdoutSink.h
cold/log/test/: LogFormatterTest.cpp  LogSinkTest.cpp  LoggerTest.cpp
cold/net/: Acceptor.cpp  Acceptor.h  BasicSocket.cpp  BasicSocket.h  Endian.h  IoAwaitable.h  IpAddress.cpp  IpAddress.h  SSLContext.h  SSLError.h  SocketOptions.h  TcpClient.h  TcpServer.h  TcpSocket.h  UdpSocket.h
cold/net/http/: DispatcherServlet.h  HttpCommon.h  HttpFilter.h  HttpRequest.cpp  HttpRequest.h  HttpRequestParser.cpp  HttpRequestParser.h  HttpResponse.h  HttpServer.cpp  HttpServer.h  HttpServlet.h  HttpSession.h  RawHttpRequest.h  RawHttpResponse.h  Router.h  Servlet.h  ServletContext.h  StaticFileBody.h  StaticFileServlet.h  WebSocket.cpp  WebSocket.h  WebSocketParser.cpp  WebSocketParser.h  WebSocketServer.cpp  WebSocketServer.h
cold/net/rpc/: RpcChannel.cpp  RpcChannel.h  RpcClient.h  RpcCodec.h  RpcServer.cpp  RpcServer.h  rpc.proto
cold/net/ssl/: SSLContext.h
cold/net/test/: AcceptorTest.cpp  BasicEchoServerTest.cpp  IpAddressTest.cpp  SocketOptionsTest.cpp
cold/thread/: Condition.h  Lock.h  Thread.cpp  Thread.h
cold/thread/test/: ConditionTest.cpp  LockTest.cpp  ThreadTest.cpp
cold/time/: SleepAndTimeout.h  Time.cpp  Time.h  TimeAwaitable.h  Timer.cpp  Timer.h  TimerQueue.cpp  TimerQueue.h
cold/time/test/: TimeTest.cpp
cold/util/: Base64.h  Config.h  Crypto.h  IntWriter.h  ScopeUtil.h  ShellColor.h  StringUtil.cpp  StringUtil.h  StringUtils.h  Url.h  Util.h
cold/util/test/: StringUtilTest.cpp
examples/: CMakeLists.txt
examples/asio/chatroom/: ChatClient.cpp  ChatMessage.h  ChatServer.cpp
examples/base/: ShellColorShow.cpp
examples/http/: WebSocketEchoPage.h  example1.cpp  example2.cpp  example3.cpp  example4.cpp
examples/net/asio/chatroom/: ChatClient.cpp  Message.h
examples/net/chatroom/: ChatServer.cpp
examples/net/filetransfer/: Transfer.cpp
examples/net/http/: BasicHttpServer.cpp  BasicHttpsServer.cpp  CMakeLists.txt  HttpFileService.cpp  HttpLogin.cpp  HttpServerWithStaticFile.cpp
examples/net/simple/: CMakeLists.txt
examples/net/simple/chargen/: ChargenServer.cpp
examples/net/simple/daytime/: DaytimeServer.cpp
examples/net/simple/discard/: Discard.cpp
examples/net/simplehttp/: CMakeLists.txt  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpServer.cpp  HttpServer.h  HttpsServer.cpp  RequestParser.cpp  RequestParser.h  RequestParserTest.cpp
examples/net/socks4a/: RelayTunnel.h  Socks4Tunnel.h  Socks4a.cpp  TcpRelay.cpp  Tunnel.h
examples/net/ssl/: CMakeLists.txt  EchoClient.cpp  EchoServer.cpp
examples/net/ttcp/: TtcpReceiver.cpp
examples/rpc/echo/: CMakeLists.txt  Client.cpp  Server.cpp  echo.proto
examples/simple/chargen/: ChargenServer.cpp
examples/simple/daytime/: TcpAndUdpBothDaytime.cpp  TcpDaytimeClient.cpp  TcpDaytimeServer.cpp  UdpDaytimeClient.cpp  UdpDaytimeServer.cpp
examples/simple/echo/: EchoClient.cpp  EchoServer.cpp  TcpAndUdpBothEcho.cpp  TcpEchoClient.cpp  TcpEchoServer.cpp  UdpEchoClient.cpp  UdpEchoServer.cpp
examples/simple/simplehttp/: HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpServer.cpp  RequestParser.cpp  RequestParser.h  RequestParserTest.cpp
examples/simple/ttcp/: TtcpBlocking.cpp  TtcpCommon.h  TtcpNonBlocking.cpp
examples/ssl/: HttpsServer.cpp
examples/ssl/daytime/: DaytimeClient.cpp  DaytimeServer.cpp
examples/timeouts/: ConnectTimeout.cpp
examples/util/: ShellColorShow.cpp
test/: CMakeLists.txt  IoAwaitableTest.cpp  IpAddressTest.cpp  LogFormatterTest.cpp  LogSinkTest.cpp  TimeoutAndSleepTest.cpp  TimerTest.cpp
test/coro/: AsyncMutexTest.cpp  ChannelTest.cpp  ConditionTest.cpp  ConditionVariableTest.cpp  TaskTest.cpp  WhenAllTest.cpp  WhenAnyTest.cpp
test/http/: CMakeLists.txt  HttpRequestParserTest.cpp  RouterTest.cpp
test/io/: AsyncIoTest.cpp
test/log/: LogFormatterTest.cpp  LogSinkTest.cpp  LoggerTest.cpp
test/net/: AcceptorTest.cpp  BasicEchoServerTest.cpp  BasicUdpEchoServerTest.cpp  ConnectTest.cpp  ConnectWithTimeoutTest.cpp  IoContextPoolTest.cpp  IoTimeoutTest.cpp  IpAddressTest.cpp  ReadWriteTest.cpp  ReusePortTest.cpp  SocketOptionsTest.cpp  TcpServerReusePortTest.cpp  TcpServerTest.cpp
test/net/http/: HttpRequestParserTest.cpp  RouterTest.cpp
test/thread/: ConditionTest.cpp  LockTest.cpp  ThreadTest.cpp
test/time/: TimeTest.cpp  TimeoutAndSleepTest.cpp  TimerTest.cpp
test/util/: ConfigTest.cpp  IntWriterTest.cpp
(+8 files in other folders)
